--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,11 @@
 [build.environment]
   NODE_VERSION = "16"
   NODE_OPTIONS = "--openssl-legacy-provider"
+  NPM_FLAGS = "--no-audit --no-fund"
 
 [build]
-  command = "npm run build"
-  publish = "build" 
+  command = "npm ci && npm run build"
+  publish = "build"
+
+[[plugins]]
+  package = "@netlify/plugin-nextjs" 
