--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "yarn": ">=1.22.0"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
